pico runtime services - more checkstyle and findbug fixes